# SQLAlchemy

./: Dockerfile  alembic.ini  docker-compose.yaml  pyproject.toml  pytest.ini  requirements.txt
Task_transaction/: bank_accounts.py  orders.py
VirtualProject/: Dockerfile  docker-compose.yaml  pyproject.toml  pytest.ini  requirements.txt
VirtualProject/migrations/: env.py
VirtualProject/models/: FastAPI.py  category.py  database.py  product.py  shop.py  user.py
VirtualProject/tests/: test_user.py
api_project/: Dockerfile  api.py  database.py  docker-compose.yaml  pyproject.toml  requirements.txt  user.py
migrations/versions/: ec7eaeb6ea97_initial.py
models/: FastAPI.py  category.py  database.py  product.py  shop.py  user.py
tests/: test_user.py
