[tool.poetry]
name = "virtual"
version = "0.1.0"
description = ""
authors = ["ars"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
unicorn = "^2.0.1.post1"
uvicorn = "^0.27.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
